; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/psp/extr_mp3.c_mp3_deinit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/psp/extr_mp3.c_mp3_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"mp3_deinit, initialized=%i\0A\00", align 1
@initialized = common dso_local global i64 0, align 8
@thread_exit = common dso_local global i32 0, align 4
@thread_busy_sem = common dso_local global i32 0, align 4
@thread_job_sem = common dso_local global i32 0, align 4
@mp3_handle = common dso_local global i32 0, align 4
@mp3_fname = common dso_local global i32* null, align 8
@mp3_codec_struct = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp3_deinit() #0 {
  %1 = load i64, i64* @initialized, align 8
  %2 = call i32 @lprintf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i64 %1)
  %3 = load i64, i64* @initialized, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  br label %26

6:                                                ; preds = %0
  store i32 1, i32* @thread_exit, align 4
  %7 = load i32, i32* @thread_busy_sem, align 4
  %8 = call i32 @psp_sem_lock(i32 %7)
  %9 = load i32, i32* @thread_busy_sem, align 4
  %10 = call i32 @psp_sem_unlock(i32 %9)
  %11 = load i32, i32* @thread_job_sem, align 4
  %12 = call i32 @sceKernelSignalSema(i32 %11, i32 1)
  %13 = call i32 @sceKernelDelayThread(i32 100000)
  %14 = load i32, i32* @mp3_handle, align 4
  %15 = icmp sge i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %6
  %17 = load i32, i32* @mp3_handle, align 4
  %18 = call i32 @sceIoClose(i32 %17)
  br label %19

19:                                               ; preds = %16, %6
  store i32 -1, i32* @mp3_handle, align 4
  store i32* null, i32** @mp3_fname, align 8
  %20 = load i32, i32* @thread_busy_sem, align 4
  %21 = call i32 @sceKernelDeleteSema(i32 %20)
  store i32 -1, i32* @thread_busy_sem, align 4
  %22 = load i32, i32* @thread_job_sem, align 4
  %23 = call i32 @sceKernelDeleteSema(i32 %22)
  store i32 -1, i32* @thread_job_sem, align 4
  %24 = load i32, i32* @mp3_codec_struct, align 4
  %25 = call i32 @sceAudiocodecReleaseEDRAM(i32 %24)
  store i64 0, i64* @initialized, align 8
  br label %26

26:                                               ; preds = %19, %5
  ret void
}

declare dso_local i32 @lprintf(i8*, i64) #1

declare dso_local i32 @psp_sem_lock(i32) #1

declare dso_local i32 @psp_sem_unlock(i32) #1

declare dso_local i32 @sceKernelSignalSema(i32, i32) #1

declare dso_local i32 @sceKernelDelayThread(i32) #1

declare dso_local i32 @sceIoClose(i32) #1

declare dso_local i32 @sceKernelDeleteSema(i32) #1

declare dso_local i32 @sceAudiocodecReleaseEDRAM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
